syntax = "proto3";

option csharp_namespace = "Utis.Minex.WrokerIntegration";

service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);
	rpc CreateWorker (WorkerAction) returns (WorkerMessage);
	rpc EditWorker (WorkerAction) returns (WorkerMessage);
	rpc DeleteWorker (WorkerAction) returns (WorkerMessage);
	rpc FindWorkerById (WorkerId) returns (WorkerMessage);
}

message WorkerId
{
	int64 Id = 1;
}

message EmptyMessage
{
}

message WorkerAction
{
	WorkerMessage Worker = 1;
	Action ActionType = 2;
}

message WorkerMessage
{
	int64 Id = 1;
	string LastName = 2;
	string FirstName = 3;
	string MiddleName = 4;
	int64 Birthday = 5;
	Sex Sex = 6;
	bool HaveChildren = 7;
}

//Пол
enum Sex {
	DefaultSex = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	DefaultAction = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}